fix: name overflow with CSP violated image causing mobile UI to break

--- a/src/assets/css/page-header.css
+++ b/src/assets/css/page-header.css
@@ -28,6 +28,7 @@
 
 .page-header__user-info {
 	position: relative;
+	overflow: hidden;
 }
 
 .page-header__user-identity {
